[metadata]
name = need_functions
version = 0.0.0
author = Steven Firth
author_email = s.k.firth@lboro.ac.uk
description = Python package for working with the National Energy Efficiency Data-Framework (NEED) dataset
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/building-energy/need_functions
project_urls =
    Source = https://github.com/building-energy/need_functions/snecs_functions
    Bug Tracker = https://github.com/building-energy/need_functions/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6


[options.package_data]
snecs_functions =
    *.json


